# aether

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  TODO.md  TODOS.md  admin.py  bootstrap.py  broker.py  config.docker.yaml  config.yaml  config_loader.py  distributed_admin.py  docker-compose.yml  gossip_broker.py  gossip_protocol.py  installaether.sh  log_utils.py  main.py  message.py  network.py  network_publisher.py  network_subscriber.py  payload_range.py  publisher.py  pyproject.toml  run_bootstrap.py  run_broker.py  run_publishers.py  run_subscribers.py  snapshot.py  subscriber.py  test_heartbeat.py  test_snapshot.py  test_snapshot_full.py  test_snapshot_markers.py  test_snapshot_recovery.py  test_snapshot_replication.py  test_tcp_basic.py  (+3 more)
.opencode/plans/: broker-deletion-fixes.md
aether/: __init__.py  config.py  snapshot.py
aether/cli/: __init__.py  admin.py  distributed_admin.py  run_bootstrap.py  run_broker.py  run_publishers.py  run_subscribers.py
aether/core/: __init__.py  broker.py  message.py  payload_range.py  publisher.py  subscriber.py
aether/gossip/: __init__.py  bootstrap.py  broker.py  protocol.py  status.py
aether/network/: __init__.py  node.py  publisher.py  subscriber.py
aether/orchestrator/: bootstrap_client.py  docker_manager.py  events.py  health.py  main.py  metrics.py  models.py  recovery.py  settings.py
aether/utils/: __init__.py  log.py
benchmarks/: __main__.py  charts.py  client.py  collectors.py  config.py  latency.py  recovery.py  runner.py  scaling.py  snapshot.py  throughput.py  verification.py
bruno/: bruno.json
bruno/Bootstrap/: Get Status.bru
bruno/Brokers/: Broker 1 Status.bru  Broker 2 Status.bru  Broker 3 Status.bru
bruno/Orchestrator/: Seed Demo Topology.bru
bruno/Publishers/: Publisher 1 Status.bru  Publisher 2 Status.bru
bruno/Subscribers/: Subscriber 1 Status.bru  Subscriber 2 Status.bru  Subscriber 3 Status.bru
bruno/environments/: Local.bru
dashboard/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
docs/: TODO.md  architecture.md  authoritative-snapshot-recovery-plan.md  broker-failover-plan.md  chaos-ui-enhancements.md  failover-flow.md  instructions.md  issues.md  learnings.md  observability-plan.md  phase-2.4-2.5-plan.md  phase-2.6-plan.md  phase0_changes.md  plan-replace-pickle-with-orjson.md  plan-required-payload-ranges.md  roadmap.md  snapshot-reliability-plan.md  subscriber-reconnect-readiness-plan.md
observability/: loki.yaml  otel-collector.yaml  prometheus.yaml
pubsub/: __init__.py  config.py  snapshot.py
pubsub/cli/: __init__.py  admin.py  distributed_admin.py  run_bootstrap.py  run_broker.py  run_publishers.py  run_subscribers.py
pubsub/core/: __init__.py  broker.py  message.py  payload_range.py  publisher.py  subscriber.py  uint8.py
pubsub/gossip/: __init__.py  bootstrap.py  broker.py  protocol.py  status.py
pubsub/network/: __init__.py  node.py  publisher.py  subscriber.py
pubsub/utils/: __init__.py  log.py
tests/: __init__.py  test_pubsub.py
tests/integration/: test_e2e.py  test_failover_e2e.py  test_heartbeat.py  test_snapshot.py  test_snapshot_full.py  testnet.py  (+5 more)
(+58 files in other folders)
