[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pubsub"
version = "0.1.0"
description = "Distributed publish-subscribe system with gossip protocol and Chandy-Lamport snapshots"
requires-python = ">=3.13"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0"
]

[project.scripts]
pubsub-admin = "pubsub.cli.admin:main"
pubsub-distributed = "pubsub.cli.distributed_admin:main"
pubsub-bootstrap = "pubsub.cli.run_bootstrap:main"
pubsub-broker = "pubsub.cli.run_broker:main"
pubsub-publisher = "pubsub.cli.run_publishers:main"
pubsub-subscriber = "pubsub.cli.run_subscribers:main"

[tool.setuptools.packages.find]
include = ["pubsub*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["tests/"]
