[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether"
version = "0.1.0"
description = "Distributed publish-subscribe system with gossip protocol and Chandy-Lamport snapshots"
requires-python = ">=3.13"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0"
]

[project.scripts]
aether-admin = "aether.cli.admin:main"
aether-distributed = "aether.cli.distributed_admin:main"
aether-bootstrap = "aether.cli.run_bootstrap:main"
aether-broker = "aether.cli.run_broker:main"
aether-publisher = "aether.cli.run_publishers:main"
aether-subscriber = "aether.cli.run_subscribers:main"

[tool.setuptools.packages.find]
include = ["aether*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["tests/"]
